fixed overflow grid and added edit html form

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,10 +1,10 @@
 body {
-    min-height: 100vh;
+    height: 100vh;
 }
 
 .app-container {
     display: none;
-    height: 100vh;
+    height: 100%;
     grid-template-rows: 2fr 15fr 1fr
 }
 
@@ -29,4 +29,11 @@ header, main, footer, .console-section, .feed-section {
 main {
     display: grid;
     grid-template-columns: 3fr 6fr;
+    height: 100%;
+    overflow: auto;
+}
+
+.feed-section {
+
+    
 }
